--- a/index.html
+++ b/index.html
@@ -420,58 +420,52 @@
           <h2 class="clientage-header">Постоянные клиенты</h2>
           <ul class="clientage-list">
             <li class="clientage-icon">
-              <a href="#" class="clients-list">
-                <button class="clientage-btn">
-                  <svg class="clientage-svg" width="49" height="44">
-                    <use href="./images/sprite.svg#logo1"></use>
-                  </svg>
-                </button>
-              </a>
+              <a href="#" class="clients-list"></a>
+              <button class="clientage-btn">
+                <svg class="clientage-svg" width="49" height="44">
+                  <use href="./images/sprite.svg#logo1"></use>
+                </svg>
+              </button>
             </li>
             <li class="clientage-icon">
-              <a href="#" class="clients-list">
-                <button>
-                  <svg class="clientage-svg" width="40" height="52">
-                    <use href="./images/sprite.svg#logo2"></use>
-                  </svg>
-                </button>
-              </a>
+              <a href="#" class="clients-list"></a>
+              <button class="clientage-btn">
+                <svg class="clientage-svg" width="40" height="52">
+                  <use href="./images/sprite.svg#logo2"></use>
+                </svg>
+              </button>
             </li>
             <li class="clientage-icon">
-              <a href="#" class="clients-list">
-                <button>
-                  <svg class="clientage-svg" width="41" height="42">
-                    <use href="./images/sprite.svg#logo3"></use>
-                  </svg>
-                </button>
-              </a>
+              <a href="#" class="clients-list"></a>
+              <button class="clientage-btn">
+                <svg class="clientage-svg" width="41" height="42">
+                  <use href="./images/sprite.svg#logo3"></use>
+                </svg>
+              </button>
             </li>
             <li class="clientage-icon">
-              <a href="#" class="clients-list">
-                <button>
-                  <svg class="clientage-svg" width="79" height="42">
-                    <use href="./images/sprite.svg#logo4"></use>
-                  </svg>
-                </button>
-              </a>
+              <a href="#" class="clients-list"></a>
+              <button class="clientage-btn">
+                <svg class="clientage-svg" width="79" height="42">
+                  <use href="./images/sprite.svg#logo4"></use>
+                </svg>
+              </button>
             </li>
             <li class="clientage-icon">
-              <a href="#" class="clients-list">
-                <button>
-                  <svg class="clientage-svg" width="59" height="47">
-                    <use href="./images/sprite.svg#logo5"></use>
-                  </svg>
-                </button>
-              </a>
+              <a href="#" class="clients-list"></a>
+              <button class="clientage-btn">
+                <svg class="clientage-svg" width="59" height="47">
+                  <use href="./images/sprite.svg#logo5"></use>
+                </svg>
+              </button>
             </li>
             <li class="clientage-icon">
-              <a href="#" class="clients-list">
-                <button>
-                  <svg class="clientage-svg" width="88" height="45">
-                    <use href="./images/sprite.svg#logo6"></use>
-                  </svg>
-                </button>
-              </a>
+              <a href="#" class="clients-list"></a>
+              <button class="clientage-btn">
+                <svg class="clientage-svg" width="88" height="45">
+                  <use href="./images/sprite.svg#logo6"></use>
+                </svg>
+              </button>
             </li>
           </ul>
         </div>
@@ -563,41 +557,115 @@
         </div>
         <div class="footer-subscribe">
           <p>Подпишитесь на рассылку</p>
-          <!-- <div class="button-corection"> -->
+          <form action="#" method="POST">
+            <label>
+              <input type="email" name="email" placeholder="E-mail" />
+            </label>
+          </form>
+
           <a class="footer-button">
             подписаться
             <svg width="24" height="24">
               <use href="./images/sprite.svg#telegram"></use>
             </svg>
           </a>
-          <!-- </div> -->
         </div>
       </div>
     </footer>
+
+    <!-- всплывающее окно -->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <p class="message">Оставте свои данные, мы Вам перезвоним</p>
-        <form action="#" method="POST">
-          <input type="text" name="User-name" placeholder="Имя" />
-          <input type="tel" name="User-tel" placeholder="Телефон" />
-          <input type="post" name="email" placeholder="Почта" />
-          <textarea name="message" id="textarea" cols="30" rows="10">
-Комментарий</textarea
-          >
-          <input type="checkbox" />
-          <button type="submit">Submit</button>
+        <form class="form" method="POST" autocomplete="off">
+          <label class="form-field">
+            <input
+              type="text"
+              class="form-input"
+              name="name"
+              pattern="^[А-Яа-яЁё\s]+$"
+              required
+              placeholder=" "
+            />
+            <span class="form-label">Имя</span>
+            <span class="input-icon">
+              <svg class="changing-color">
+                <use href="images/InlineSprite.svg#src-3"></use>
+              </svg>
+            </span>
+          </label>
+
+          <label class="form-field">
+            <input
+              type="tel"
+              class="form-input"
+              name="User-tel"
+              pattern="[0-9]{10}"
+              required
+              placeholder=" "
+            />
+            <span class="form-label">Телефон</span>
+            <span class="input-icon">
+              <svg>
+                <use
+                  href="images/InlineSprite.svg#src-2"
+                  width="18"
+                  height="18"
+                ></use>
+              </svg>
+            </span>
+          </label>
+
+          <label class="form-field">
+            <input
+              type="email"
+              class="form-input"
+              name="email"
+              pattern="([A-z0-9_.-]{1,})@([A-z0-9_.-]{1,}).([A-z]{2,8})"
+              required
+              placeholder=" "
+            />
+            <span class="form-label">Почта</span>
+            <span class="input-icon">
+              <svg>
+                <use href="images/InlineSprite.svg#src-5"></use>
+              </svg>
+            </span>
+          </label>
+
+          <label class="form-field">
+            <textarea
+              class="comment"
+              name="message"
+              cols="30"
+              rows="10"
+              placeholder="Комментарий"
+            ></textarea>
+          </label>
+
+          <label class="form-field">
+            <input class="checkbox" type="checkbox" />
+            <span class="span-icon">
+              <!-- <img src="./images/symbol-defs.svg#icon-Vector" alt="" /> -->
+              <!-- !!!!!!!!!!!!!! -->
+              <!-- <svg>
+                <use
+                  href="./images/symbol-defs.svg#icon-Vector"
+                  width="16"
+                  height="16"
+                ></use>
+              </svg> -->
+            </span>
+            Соглашаюсь с рассылкой и принимаю
+            <a href="#">Условия договора</a>
+          </label>
+
+          <button class="btn-backdrop" type="submit" enabled>Отправить</button>
         </form>
         <button class="btn-close" data-modal-close>
-          <!-- <svg width="18" height="18">
-            <use href="./images/close-black-18dp.svg"></use>
-          </svg> -->
-          <img
-            src="./images/close-black-18dp.svg"
-            class="btn-img"
-            width="18"
-            height="18"
-            alt=""
-          />
+          <svg class="btn-img">
+            <use href="./images/InlineSprite.svg#src-7"></use>
+          </svg>
         </button>
       </div>
     </div>
