--- a/portfolio.html
+++ b/portfolio.html
@@ -324,8 +324,14 @@
         </div>
         <div class="footer-subscribe">
           <p>Подпишитесь на рассылку</p>
-          <a class="footer-button"
-            >подписаться
+          <form action="#" method="POST">
+            <label>
+              <input type="email" name="email" placeholder="E-mail" />
+            </label>
+          </form>
+
+          <a class="footer-button">
+            подписаться
             <svg width="24" height="24">
               <use href="./images/sprite.svg#telegram"></use>
             </svg>
