--- a/index.html
+++ b/index.html
@@ -606,12 +606,8 @@
             />
             <span class="form-label">Телефон</span>
             <span class="input-icon">
-              <svg>
-                <use
-                  href="images/InlineSprite.svg#src-2"
-                  width="18"
-                  height="18"
-                ></use>
+              <svg class="changing-color">
+                <use href="images/InlineSprite.svg#src-2"></use>
               </svg>
             </span>
           </label>
@@ -627,7 +623,7 @@
             />
             <span class="form-label">Почта</span>
             <span class="input-icon">
-              <svg>
+              <svg class="changing-color">
                 <use href="images/InlineSprite.svg#src-5"></use>
               </svg>
             </span>
@@ -645,17 +641,7 @@
 
           <label class="form-field">
             <input class="checkbox" type="checkbox" />
-            <span class="span-icon">
-              <!-- <img src="./images/symbol-defs.svg#icon-Vector" alt="" /> -->
-              <!-- !!!!!!!!!!!!!! -->
-              <!-- <svg>
-                <use
-                  href="./images/symbol-defs.svg#icon-Vector"
-                  width="16"
-                  height="16"
-                ></use>
-              </svg> -->
-            </span>
+            <span class="span-icon"> </span>
             Соглашаюсь с рассылкой и принимаю
             <a href="#">Условия договора</a>
           </label>
